--- a/index.html
+++ b/index.html
@@ -30,24 +30,93 @@
         </div>
     </main>
     <footer>
-        <h2 class='footerText' onclick="floaterDivActive(0)">Sobre mim</h2>
-        <h2 class='footerText' onclick="floaterDivActive(1)">Projetos</h2>
-        <h2 class='footerText' onclick="floaterDivActive(2)">Stacks</h2>
+        <div class='footerDiv'>
+            <h2  class='footerText' onclick="floaterDivActive(0)">Sobre mim</h2>
+        </div>
+        <div class='footerDiv'>
+            <h2 class='footerText' onclick="floaterDivActive(1)">Projetos</h2>
+        </div>
+        <div class='footerDiv'>
+            <h2 class='footerText' onclick="floaterDivActive(2)">Conhecimentos</h2>
+        </div>
 
     </footer>
 </body>
 
-<div class='floaterDiv'>
+<div class='floaterDiv firstSection floaterDivActive'>
     <button class='floaterDivCloseButton' onclick="closeFloaterDiv()">x</button>
-    sobre mim
+    <h2 class="aboutMeTitle">Oi, eu sou o Mateus</h2>
+
+    <div class="aboutMeContainer">
+        <div class="divAboutMe divAboutMeOne">
+            <p>
+                Tenho 26 anos e estou estudando programação há 6 meses, desde quando descobri que realmente gosto da profissão.
+                Não tenho uma longa experiência com desenvolvimento ainda, até porque concílio trabalho, casa, saúde e relacionamento
+                com a programação, mas já tenho vários pequenos projetos que você pode ver no meu GitHub, e alguns estão aqui nesse site. 
+            </p>
+
+        </div>
+        <div class="divAboutMe divAboutMeTwo">
+            <p>
+                Por mais que eu não tenha experiência em programação, tenho várias experiências de trabalho que me ensinaram muita coisa.
+            </p>
+            <p>
+                Trabalhei com vendas e cobrança, durante muito tempo, onde aprendi não só a trabalhar sobre pressão e com prazo, mas também 
+                a me comunicar muito bem.
+            </p>
+            <p>
+                E mais recentemente tenho trabalhado em uma empresa de software, que oferece um ERP legado, o que tem me ensinado muito do que 
+                um cliente espera de um software.
+            </p>
+        </div>
+        <div class="divAboutMe divAboutMeThree">
+            <p>
+                Falando um pouco sobre meu pessoal, sou músico (toco violão, guitarra e canto músicas barulhentas), namoro há 8 anos,
+                adoro videogames (principalmente Dark Souls), escuto desde música clássica até metal, vejo memes desde que eles nasceram, 
+                
+            </p>
+        </div>
+    </div>
+
 </div>
 <div class='floaterDiv'>
     <button class='floaterDivCloseButton' onclick="closeFloaterDiv()">x</button>
     Projetos
 </div>
-<div class='floaterDiv'>
+<div class='floaterDiv thirdSection'>
     <button class='floaterDivCloseButton' onclick="closeFloaterDiv()">x</button>
-    Stacks
+    
+    <div class="divKnowledge divOne">
+        <h3 class="knowledgeTitle">Que eu domino</h3>
+
+                <img src="html5icon.png" alt="html5icon" class="logo">
+                <label for="logo">HTML5</label>
+                <img src="css3icon.png" alt="css3icon" class="logo">
+                <label for="logo">CSS3</label>
+                <img src="jsicon.jpg" alt="jsicon" class="logo">
+                <label for="logo">JavaScript</label>
+
+    </div>
+    <div class="divKnowledge divTwo">
+        <h3 class="knowledgeTitle">Que eu estou aprendendo</h3>
+
+        <img src="React-icon.svg" alt="reacticon" class="logo">
+        <label for="logo">React JS</label>
+        <img src="ui-ux-icon.png" alt="uiuxicon" class="logo">
+        <label for="logo">UI/UX</label>
+
+
+    </div>
+    <div class="divKnowledge divThree">
+        <h3 class="knowledgeTitle">Que eu quero aprender</h3>
+
+        <img src="bootstrapicon.png" alt="bootstrapicon" class="logo">
+        <label for="logo">Bootstrap</label>
+        <img src="nodeicon.png" alt="nodeicon" class="logo">
+        <label for="logo">NodeJS</label>
+        <img src="React-icon.svg" alt="reactiicon" class="logo">
+        <label for="logo">React Native</label>
+    </div>
 </div>
 
 </html>
