att sobre mim e conhecimentos

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </footer>
 </body>
 
-<div class='floaterDiv firstSection floaterDivActive'>
+<div class='floaterDiv firstSection'>
     <button class='floaterDivCloseButton' onclick="closeFloaterDiv()">x</button>
     <h2 class="aboutMeTitle">Oi, eu sou o Mateus</h2>
 
@@ -73,7 +73,7 @@
             <p>
                 Falando um pouco sobre meu pessoal, sou músico (toco violão, guitarra e canto músicas barulhentas), namoro há 8 anos,
                 adoro videogames (principalmente Dark Souls), escuto desde música clássica até metal, vejo memes desde que eles nasceram, 
-                
+
             </p>
         </div>
     </div>
