alteração da cor da fonte e texto sobre mim

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
         </div>
         <div class="divAboutMe divAboutMeThree">
             <p>
-                Falando um pouco sobre meu pessoal, sou músico (toco violão, guitarra e canto músicas barulhentas), namoro há 8 anos,
-                adoro videogames (principalmente Dark Souls), escuto desde música clássica até metal, vejo memes desde que eles nasceram e 
-                gosto de livros mas não gosto de ler.
+                Além do meu conhecimento de programação e experiências profissionais, tenho também <strong>inglês avançado</strong>, sou <strong>organizado</strong>, 
+                ótimo com <strong>lógica</strong>. <br><br>
+                 <strong>Tenho uma ótima comunicação</strong>, me <strong>adapto</strong> muito bem a <strong>novas situações</strong> e sou acostumado a trabalhar sobre <strong>pressão</strong>.
             </p>
         </div>
     </div>
